--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
   min-height: 100vh;
+  min-width: 100vw;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
+}
+
+.container {
+  width: 100%;
+  height: inherit;
+}
+
+.divider-hitbox {
+  cursor: col-resize;
+  align-self: stretch;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.divider {
+  height: 100%;
+  border: 1px solid #f3f4f6;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-pane {
+  height: 100%;
+  min-width: 40px;
+  border-radius: 0px;
+}
+
+.right-pane {
+  flex: 1;
+}
+
+.split-view {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.sidebar {
+  height: 100%;
 }
